# trajectory

./: README.md  setup.py
design/: diagrams.graffle
design/Notebooks/: AccelErrors.ipynb  Bresenham.ipynb  BuildSegments.ipynb  Equations.ipynb  FixedPointSim.ipynb  JITTrajectory.ipynb  JoystickSim.ipynb  Trajectories.ipynb
src/: .gitignore  CMakeLists 2.txt  CMakeLists.txt  Hello.cpp
src/cli/: CMakeLists.txt  cli.cpp  planner.cpp  stepper.cpp
src/cmake-cli-test/: make_build_system.sh
src/cmake-cli-test/cli/: input.txt  planner  planner_input.txt  stepper  stepper.txt  stepper_input.txt  trj_planner
src/cmake-cli-test/planner/: version.h
src/cmake-cli-test/test/: test_planner  test_planner_include-b12d07c.cmake  test_planner_tests-b12d07c.cmake
src/planner/: CMakeLists.txt  Makefile  col.h  trj_block.cpp  trj_block.h  trj_config.h  trj_debug.h  trj_joint.cpp  trj_joint.h  trj_jointss.cpp  trj_jointss.h  trj_move.cpp  trj_move.h  trj_planner.cpp  trj_planner.h  trj_planner_const.h  trj_segment.cpp  trj_segment.h  trj_segstepper.cpp  trj_segstepper.h  trj_stepdriver.cpp  trj_stepdriver.h  trj_stepper.cpp  trj_stepper.h  trj_types.h  trj_util.cpp  trj_util.h  version.h.in
src/python/: CMakeLists.txt  test.cpp
src/stepper/: trj_config.h  trj_debug.cpp  trj_stepdriver.h
src/test/: CMakeLists.txt  stepper_file_test.txt  test.cpp  test_basic.cpp  test_block.cpp  test_planner  test_planner.cpp  test_planner_include-b12d07c.cmake  test_planner_tests-b12d07c.cmake  test_segment.cpp  test_stepper.cpp
test/: ACDBlock.ipynb  CPPTest.ipynb  Devel.ipynb  IPSolve.ipynb  Planner.ipynb  PlotMinTime.ipynb  RegressionTests.ipynb  Scratch.ipynb  SegmentTests.ipynb  Stepping.ipynb  TestClassify.ipynb  UnitTest.ipynb  limits.csv  startup.py
trajectory/: __init__.py  classify.py  exceptions.py  gsolver.py  joystick.py  params.py  planner.py  plot.py  profiles.py  proto.py  segments.py  sim.py  stepper.py  trapmath.py
trajectory/old/: trapmath.py
trajectory/old_code/: iplanner.py  isolver.py  util.py
trajectory/test/: Simpoints.ipynb  Test.ipynb  cpptest.py  test_complex.py  test_extension.py  test_planner.py  test_points.py  test_prod.py
